compilers/ID/cool/regression/BASE_semanttest/circ_method_ref.cl.stderr
./BASE_semanttest/circ_method_ref.cl:7: Class C2, or an ancestor of C2, is involved in an inheritance cycle.
./BASE_semanttest/circ_method_ref.cl:3: Class C1, or an ancestor of C1, is involved in an inheritance cycle.
Compilation halted due to static semantic errors.
